--- a/app/design/frontend/pc/default/template/page/2columns-left.phtml
+++ b/app/design/frontend/pc/default/template/page/2columns-left.phtml
@@ -42,7 +42,7 @@
     <div class="page">
         <?php echo $this->getChildHtml('header') ?>
         <div class="main-container col2-left-layout">
-            <div class="main">
+            <div class="main MT10">
                 <?php echo $this->getChildHtml('breadcrumbs') ?>
                 <div class="col-main">
                     <?php echo $this->getChildHtml('global_messages') ?>
